<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/departmentListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.DepartmentListFragment">

    <TextView
        android:id="@+id/departmentsText"
        android:layout_width="150dp"
        android:layout_height="67dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="1dp"
        android:text="@string/department_list_header"
        android:textColor="@color/aic_red"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/departmentList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/departmentList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="214dp"
        android:background="@color/aic_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/department_list_item" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="78dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/aic_logo"
        app:layout_constraintBottom_toTopOf="@+id/departmentList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="55dp"
        android:layout_height="37dp"
        android:layout_marginTop="146dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/search_button_description"
        android:src="?android:attr/actionModeWebSearchDrawable"
        app:layout_constraintBottom_toTopOf="@+id/departmentList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="137dp"
        android:ems="10"
        android:hint="@string/search_bar_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>